# animancer

./: Cargo.toml  README.md  REVJAM4.md  cargo-generate.toml  hexagonal grouping pattern.txt  post-generate.rhai  rustc-ice-2024-10-13T23_38_09-52592.txt  rustc-ice-2024-10-13T23_46_38-18076.txt
.cargo/: config.toml  config_fast_builds.toml
.github/workflows/: ci.yaml  release.yaml
revjam4/: index.html  main.js  style.css
src/: ai.rs  camera.rs  combat.rs  construction.rs  conversion.rs  currency.rs  detection.rs  faith.rs  fog_of_war.rs  generator.rs  helpers.rs  inputs.rs  lib.rs  main.rs  map.rs  movement.rs  nav_agent.rs  priest.rs  producer.rs  schedule.rs  selectable.rs  state.rs  structure.rs  teams.rs  test_scene.rs  ui.rs  unit.rs  visual_feedback.rs  warrior.rs  worker.rs
web/: index.html  style.css
